--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ COMPOSE_PROJECT_NAME=docker4-drupal-custom
 PROJECT_NAME=docker4-drupal-custom
 PROJECT_BASE_URL=docker4-drupal-custom.docker.localhost
 PROJECT_PORT=8000
+MYSQL_PORT=9000
 
 ### DATABASE SETTINGS
 DB_NAME=drupal
