--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./database-init:/docker-entrypoint-initdb.d # Place init .sql file(s) here.
       - ./database-data/mysql:/var/lib/mysql # Use bind mount
     ports:
-      - '3307:3306'
+      - '${MYSQL_PORT}:3306'
 
   php:
     image: wodby/drupal-php:$PHP_TAG
@@ -242,7 +242,7 @@ services:
     command: --api.insecure=true --providers.docker
     ports:
       - "${PROJECT_PORT}:80"
-      - '8080:8080' # Dashboard
+    #  - '8080:8080' # Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
