--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@
 ### Images tags format explained at https://github.com/wodby/docker4drupal#images-tags
 
 ### PROJECT SETTINGS
-COMPOSE_PROJECT_NAME=docker4-drupal-custom
-PROJECT_NAME=docker4-drupal-custom
-PROJECT_BASE_URL=docker4-drupal-custom.docker.localhost
+COMPOSE_PROJECT_NAME=drupal-social-dev
+PROJECT_NAME=drupal-social-dev
+PROJECT_BASE_URL=drupal-social-dev.docker.localhost
 PROJECT_PORT=8000
-MYSQL_PORT=9000
+MYSQL_PORT=8001
 
 ### DATABASE SETTINGS
 DB_NAME=drupal
@@ -77,7 +77,7 @@ SOLR_TAG=8-4.12.1
 ### OTHERS
 
 ADMINER_TAG=4-3.15.1
-APACHE_TAG=2.4-4.6.3
+APACHE_TAG=2.4
 ATHENAPDF_TAG=2.16.0
 DRUPAL_NODE_TAG=1.0-2.0.0
 MEMCACHED_TAG=1-2.9.4
