Switched from mysql to mariadb

--- a/.env
+++ b/.env
@@ -14,13 +14,16 @@ DB_NAME=drupal
 DB_USER=drupal
 DB_PASSWORD=drupal
 DB_ROOT_PASSWORD=password
-DB_HOST=mysql
+DB_HOST=mariadb
 DB_PORT=3306
 DB_DRIVER=mysql
 
-### --- MYSQL ----
-MYSQL_TAG=5.7.30
-#MYSQL_TAG=8.0
+### --- MARIADB ----
+
+MARIADB_TAG=10.6-3.15.0
+#MARIADB_TAG=10.5-3.15.0
+#MARIADB_TAG=10.4-3.15.0
+#MARIADB_TAG=10.3-3.15.0
 
 ### --- VANILLA DRUPAL ----
 
