Add another DB command, and more settings to php

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,10 @@ services:
 #      PHP_FPM_GROUP: wodby
 #      COLUMNS: 80 # Set 80 columns for docker exec -it.
 #      # Read instructions at https://wodby.com/docs/stacks/php/local/#xdebug
+      PHP_MEMORY_LIMIT: -1
+      #      PHP_MEMORY_LIMIT: 128M
+      PHP_CLI_MEMORY_LIMIT: -1
+      #      PHP_CLI_MEMORY_LIMIT: 128M
       PHP_MAX_EXECUTION_TIME: 600
       PHP_MAX_INPUT_TIME: 600
       PHP_MAX_FILE_UPLOADS: 128
